--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,32 @@ dependencies:
   #staggered view
   flutter_staggered_grid_view: ^0.4.0
 
+  #svg
+  flutter_svg: ^1.1.3
+
+  #pull refresh
+  pull_to_refresh: ^2.0.0
+
+  #intl
+  intl: ^0.17.0
+
+  #share
+  share_plus: ^6.3.0
+
+  #flutter screen
+  flutter_screenutil: ^5.5.3+2
+
+  #drawble
+  drawable: ^0.1.0
+
+  #confetti
+  confetti: ^0.7.0
+
+  flutter_localizations:
+    sdk: flutter
+  lib_app:
+    path: ./lib_app
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -81,9 +107,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo/
+    - assets/svg/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -96,17 +123,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: OpenBold
+      fonts:
+        - asset: assets/fonts/OpenSans-Bold.ttf
+    - family: Open
+      fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
